overlays/qa/patch-qa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: springboot-app
