overlays/qa/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: springboot-ingress
  # namespace: qa 
spec:
  rules:
  - host: qa.springboot.com    # qa specific host
